Biography of Rev. Daniel Yaw Boateng

--- a/Index.html
+++ b/Index.html
@@ -1,37 +1,159 @@
-html_content = """
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Richmond web</title>
-    <style>
-        body {
-            background-color: #f4f4f4;
-            font-family: Arial;
-            text-align: center;
-            padding: 40px;
-        }
-        h1 {
-            color: darkblue;
-        }
-        p {
-            font-size: 18px;
-            width: 80%;
-            margin: auto;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Biography of Daniel Yaw Boateng</title>
+
+<style>
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background: #f4f8ff;
+    margin:0;
+    line-height:1.6;
+}
+
+header{
+    background:#002147;
+    color:white;
+    padding:30px;
+    text-align:center;
+}
+
+section{
+    padding:30px;
+    max-width:900px;
+    margin:auto;
+    background:white;
+    margin-top:20px;
+    border-radius:10px;
+    box-shadow:0 0 10px rgba(0,0,0,0.1);
+}
+
+h2{
+    color:#002147;
+}
+
+.testimony{
+    border-left:4px solid #002147;
+    padding-left:15px;
+    margin:20px 0;
+    font-style:italic;
+}
+
+footer{
+    background:#002147;
+    color:white;
+    text-align:center;
+    padding:20px;
+    margin-top:40px;
+    font-size:14px;
+}
+
+</style>
 </head>
+
 <body>
-    <h1>Richmond web</h1>
-    <p>
-    The later life of Jesus focused on His ministry, teachings,
-    miracles, crucifixion, and resurrection. He preached love,
-    forgiveness, repentance, and the Kingdom of God.
-    Christians believe He rose from the dead on the third day.
-    </p>
+
+<header>
+<h1>Biography of Daniel Yaw Boateng</h1>
+<p>Content created by CCC Ghana</p>
+</header>
+
+<section>
+<h2>Early Life</h2>
+
+<p>
+Daniel Yaw Boateng was born in Kumasi in the Ashanti Region of Ghana. 
+From preschool through tertiary education, he was described in this biography as an outstanding student who consistently performed at the top of his class.
+
+He was given the honorary description of <strong>"Premus Interpara"</strong> during his time at KNUST for exemplary academic excellence.
+
+He later pursued Christian theological studies in an international Christian academic program referenced in this story.
+</p>
+</section>
+
+<section>
+<h2>Ministry and Church Service</h2>
+
+<p>
+In this biographical presentation, Daniel Yaw Boateng is described as the general overseer of CCC and an associate apostle connected with church ministry work.
+He is portrayed as a kind, caring, and loving man dedicated to Christian service and community development.
+</p>
+</section>
+
+<section>
+<h2>Family Life</h2>
+
+<p>
+Daniel is married to Mrs. Stella Boateng and they are described as having three children and a Christ-centered family life focused on love, prayer, and unity.
+</p>
+</section>
+
+<section>
+<h2>Testimonies</h2>
+
+<div class="testimony">
+"Pastor Daniel has been a blessing to many children through community outreach programs." – Orphanage Leader
+</div>
+
+<div class="testimony">
+"The Boateng family is known for their generosity and strong Christian values." – Church Member
+</div>
+
+<div class="testimony">
+"His ministry inspires young people to pursue both education and faith." – Youth Leader
+</div>
+
+</section>
+
+<section>
+<h2>Additional Good Deeds and Community Impact</h2>
+
+<p>
+Daniel Yaw Boateng is described as a man who dedicates his life to kindness, compassion, and Christian service to humanity.
+
+He supports educational development programs by encouraging young students to focus on their studies and maintain strong moral character.
+
+He organizes motivational visits to schools where he speaks about discipline, prayer, and the importance of combining academic excellence with spiritual growth.
+
+Many young people are inspired by his teachings on hard work and faith.
+
+He also supports orphanage homes through donation programs that provide food, clothing, and educational materials for vulnerable children.
+
+Orphanage leaders appreciate his visits which bring emotional encouragement and hope to children.
+
+The biography story also describes him as showing compassion toward elderly people in the community.
+
+He participates in community programs that provide basic living assistance, prayer fellowship, and moral encouragement to elderly individuals living without family support.
+
+Daniel Yaw Boateng promotes youth development programs that encourage vocational skill training and entrepreneurship awareness among young people.
+
+He supports community peace initiatives by encouraging forgiveness, reconciliation, and peaceful coexistence among families.
+
+He participates in hospital visitation programs where he prays for the sick and comforts patients.
+
+Environmental cleanliness and community sanitation awareness are also part of his community work.
+
+The Boateng family is presented as a symbol of love-driven Christian leadership, generosity, humility, and service to society.
+
+This biography is presented as storytelling content created by CCC Ghana.
+</p>
+
+</section>
+
+<section>
+<h2>Family Values</h2>
+
+<p>
+The Boateng family is portrayed as a Christ-centered family known for charity work, prayer life, and community service.
+</p>
+
+</section>
+
+<footer>
+<p>© 2026 CCC Ghana | Biography Presentation Page</p>
+</footer>
+
 </body>
 </html>
-"""
-
-with open("richmond_web.html", "w") as file:
-    file.write(html_content)
-
-print("Website created successfully!")
